download fix and alignment changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,7 +57,7 @@ svg,img { max-width: 100%; height: auto; }
 /*-----------------------------------------------------------------
   2. >>> Banner Style
 ----------------------------------------------------------------*/
-.ds-banner section{ padding-left: 70px; padding-right: 70px; }
+.ds-banner section{ padding-left: 60px; padding-right: 60px; }
 .hi_there{ display: block; text-transform: uppercase; letter-spacing: 1px;  font-weight: 500; font-size: 16px; padding-bottom: 30px; }
 .ds-banner section h1{ font-weight: 300; font-size: 40px; line-height: 60px; color: var(--primary-color); }
 .ds-numbervalulist{ list-style: none; display: flex; align-items: center; flex-wrap: wrap; margin: 0; padding: 0; margin-top: 60px; }
